--- a/src/app/client/user-home/user-home.component.html
+++ b/src/app/client/user-home/user-home.component.html
@@ -2,5 +2,6 @@
     <a class="item" routerLink="/user" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">Thông
         tin
         tài khoản</a>
-    <a class="item" routerLink="/user/courses" routerLinkActive="active">Khóa học của tôi</a>
+    <a class="item" routerLink="/user/courses" routerLinkActive="active"
+        [routerLinkActiveOptions]="{ exact: true }">Khóa học của tôi</a>
 </app-user>
