--- a/src/app/admin/users/users.component.html
+++ b/src/app/admin/users/users.component.html
@@ -2,39 +2,44 @@
     <h2 style="text-align: center;">All users</h2>
     <h3 class="users__add"> <a routerLink="/admin/users/add">Thêm người dùng</a> </h3>
     <div *ngIf="dataSource">
-        <mat-table [dataSource]="dataSource.items | userFilter: inputSearch">
-            <mat-header-row *matHeaderRowDef="columnsToDisplay"></mat-header-row>
-            <mat-row *matRowDef="let row; columns: columnsToDisplay"></mat-row>
+        <mat-table [dataSource]="dataSource.items | userFilter: inputSearch" matSort>
+            <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
+            <tr mat-row *matRowDef="let row; columns: columnsToDisplay"></tr>
 
             <!-- Name Column -->
             <ng-container matColumnDef="index">
-                <mat-header-cell *matHeaderCellDef mat-sort-header> No. </mat-header-cell>
-                <mat-cell *matCellDef="let row; let i = index"> {{i + 1}} </mat-cell>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> No. </th>
+                <td mat-cell *matCellDef="let row; let i = index"> {{i + 1}} </td>
             </ng-container>
             <ng-container matColumnDef="name">
-                <mat-header-cell *matHeaderCellDef mat-sort-header> Tên </mat-header-cell>
-                <mat-cell *matCellDef="let row"> {{row.hoTen}} </mat-cell>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Tên </th>
+                <td mat-cell *matCellDef="let row"> {{row.hoTen}} </td>
             </ng-container>
             <ng-container matColumnDef="useraccount">
-                <mat-header-cell *matHeaderCellDef mat-sort-header>Tài khoản </mat-header-cell>
-                <mat-cell *matCellDef="let row"> {{row.taiKhoan}} </mat-cell>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Tài khoản </th>
+                <td mat-cell *matCellDef="let row"> {{row.taiKhoan}} </td>
             </ng-container>
             <ng-container matColumnDef="soDT">
-                <mat-header-cell *matHeaderCellDef mat-sort-header>Số điện thoại </mat-header-cell>
-                <mat-cell *matCellDef="let row"> {{row.soDT}} </mat-cell>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Số điện thoại </th>
+                <td mat-cell *matCellDef="let row"> {{row.soDT}} </td>
             </ng-container>
             <ng-container matColumnDef="role">
-                <mat-header-cell *matHeaderCellDef mat-sort-header>Vai trò</mat-header-cell>
-                <mat-cell *matCellDef="let row"> {{row.tenLoaiNguoiDung}} </mat-cell>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Vai trò</th>
+                <td mat-cell *matCellDef="let row"> {{row.tenLoaiNguoiDung}} </td>
             </ng-container>
             <ng-container matColumnDef="action">
-                <mat-header-cell *matHeaderCellDef mat-sort-header>Thao tác</mat-header-cell>
-                <mat-cell *matCellDef="let row">
-                    <button class="mr-3" (click)="getUserInfo(this.row.taiKhoan)">Chi tiet</button>
-                    <button class="mr-3" (click)="openDialog()">Ghi danh</button>
-                    <button class="mr-3" (click)="updateUser()">Chinh sua</button>
-                    <button class="mr-3" (click)="deleteUser(this.row.taiKhoan)">Xoa</button>
-                </mat-cell>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Thao tác</th>
+                <td mat-cell *matCellDef="let row">
+                    <button mat-raised-button class="mr-1 p-0" (click)="getUserInfo(this.row.taiKhoan)">Chi
+                        tiet</button>
+                    <button mat-raised-button color="primary" class="mr-1 p-0"
+                        (click)="openDialog(this.row.taiKhoan)">Ghi danh</button>
+                    <button mat-raised-button color="accent" class="mr-1 p-0"
+                        (click)="updateUser(this.row.taiKhoan)">Chinh
+                        sua</button>
+                    <button mat-raised-button color="warn" class="mr-1 p-0"
+                        (click)="deleteUser(this.row.taiKhoan)">Xoa</button>
+                </td>
             </ng-container>
         </mat-table>
         <mat-paginator [length]="dataSource.totalCount" [pageSize]="dataSource.count"
