--- a/src/assets/sass/Base/_reset.scss
+++ b/src/assets/sass/Base/_reset.scss
@@ -8,6 +8,8 @@ body,
 html {
     height: 100vh;
     background-color: #1e1e2a;
+    // background-color: #535363;
+
     font-family: sans-serif;
     font-size: 62.5%;
     line-height: 1.8;
