--- a/src/app/admin/ghi-danh/ghi-danh.component.html
+++ b/src/app/admin/ghi-danh/ghi-danh.component.html
@@ -1,8 +1,76 @@
-<h2 mat-dialog-title>Ghi Danh</h2>
-<mat-dialog-content>
-    Dialog content go here!
-</mat-dialog-content>
-<mat-dialog-actions align="end">
-    <button mat-button mat-dialog-close>Cancel</button>
-    <button mat-button [mat-dialog-close]="true" cdkFocusInitial>OK</button>
-</mat-dialog-actions>
+<div class="ghiDanhByUser">
+    <h2 mat-dialog-title>Ghi Danh</h2>
+    <mat-dialog-content>
+        <div class="khoaHocChuaGhiDanh">
+            <h4>Chọn khóa học</h4>
+            <mat-form-field appearance="fill">
+                <mat-label>Khóa học</mat-label>
+                <mat-select [(value)]="selected">
+                    <mat-option>None</mat-option>
+                    <mat-option *ngFor="let course of unResgiteredCourses" [value]="course.maKhoaHoc">
+                        {{course.tenKhoaHoc}}
+                    </mat-option>
+                </mat-select>
+            </mat-form-field>
+            <button mat-raised-button color="primary" (click)="register(selected)">Ghi danh</button>
+        </div>
+        <hr>
+        <div class="khoaHocChoXacThuc" *ngIf="unAuthenticatedCourses">
+            <h4>Khóa học chờ xác thực</h4>
+            <table mat-table [dataSource]="unAuthenticatedCourses" class="mat-elevation-z8">
+                <!-- Position Column -->
+                <ng-container matColumnDef="position">
+                    <th mat-header-cell *matHeaderCellDef> No. </th>
+                    <td mat-cell *matCellDef="let element; let i = index"> {{i + 1}} </td>
+                </ng-container>
+
+                <!-- Name Column -->
+                <ng-container matColumnDef="tenKhoaHoc">
+                    <th mat-header-cell *matHeaderCellDef> Tên khóa học </th>
+                    <td mat-cell *matCellDef="let element"> {{element.tenKhoaHoc}} </td>
+                </ng-container>
+
+                <!-- Weight Column -->
+                <ng-container matColumnDef="maKhoaHoc">
+                    <th mat-header-cell *matHeaderCellDef> Mã khóa học </th>
+                    <td mat-cell *matCellDef="let element"> {{element.maKhoaHoc}} </td>
+                </ng-container>
+
+
+                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+            </table>
+        </div>
+        <hr>
+        <div class="khoaHocDaGhiDanh" *ngIf="AuthenticationCourses">
+            <h4>Khóa học đã ghi danh</h4>
+            <table mat-table [dataSource]="AuthenticationCourses" class="mat-elevation-z8">
+                <!-- Position Column -->
+                <ng-container matColumnDef="position">
+                    <th mat-header-cell *matHeaderCellDef> No. </th>
+                    <td mat-cell *matCellDef="let element; let i = index"> {{i + 1}} </td>
+                </ng-container>
+
+                <!-- Name Column -->
+                <ng-container matColumnDef="tenKhoaHoc">
+                    <th mat-header-cell *matHeaderCellDef> Tên khóa học </th>
+                    <td mat-cell *matCellDef="let element"> {{element.tenKhoaHoc}} </td>
+                </ng-container>
+
+                <!-- Weight Column -->
+                <ng-container matColumnDef="maKhoaHoc">
+                    <th mat-header-cell *matHeaderCellDef> Mã khóa học </th>
+                    <td mat-cell *matCellDef="let element"> {{element.maKhoaHoc}} </td>
+                </ng-container>
+
+
+                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+            </table>
+        </div>
+    </mat-dialog-content>
+    <mat-dialog-actions align="end">
+        <button mat-button mat-dialog-close>Cancel</button>
+        <button mat-button [mat-dialog-close]="true" cdkFocusInitial>OK</button>
+    </mat-dialog-actions>
+</div>
