--- a/src/app/admin/user-profile/user-profile.component.html
+++ b/src/app/admin/user-profile/user-profile.component.html
@@ -11,11 +11,88 @@
             <mat-card-subtitle>{{user.email}}</mat-card-subtitle>
         </mat-card-header>
         <mat-divider></mat-divider>
-        <mat-card-content class="mt-3">
+        <!-- <mat-card-content class="mt-3">
             <p><strong> Tài khoản</strong> : {{user.taiKhoan}}</p>
             <p> <strong>Vai trò</strong> : {{user.maLoaiNguoiDung === 'HV' ? 'Học viên' : 'Giáo viên'}}</p>
             <p> <strong>Số điện thoại</strong> : {{user.soDT}}</p>
             <p> <strong>Nhóm</strong> : {{user.maNhom}}</p>
+        </mat-card-content> -->
+        <mat-card-content>
+            <form [formGroup]="userForm">
+                <p>
+                    <mat-form-field appearance="legacy">
+                        <mat-label>Tên người dùng</mat-label>
+                        <input matInput placeholder="Placeholder" formControlName="hoTen">
+                        <mat-hint>ví dụ: Nguyễn văn A</mat-hint>
+                        <mat-error>
+                            <div *ngIf="(hoTenError?.invalid && hoTenError?.touched) || hoTenError?.dirty">
+                                <span *ngIf="hoTenError?.errors?.required">Họ tên không được để trống</span>
+                            </div>
+                        </mat-error>
+                    </mat-form-field>
+                </p>
+                <p class="example-container">
+                    <mat-form-field appearance="fill">
+                        <mat-label>Enter your email</mat-label>
+                        <input matInput placeholder="pat@example.com" formControlName="email">
+                        <mat-hint>ví dụ: email@gmail.com</mat-hint>
+                        <mat-error>
+                            <div *ngIf="(emailError?.invalid && emailError?.touched) || emailError?.dirty">
+                                <span *ngIf="emailError?.errors?.required">Email Khong duoc bo trong</span>
+                                <span *ngIf="emailError?.errors?.email">Email khong hop le!</span>
+                            </div>
+                        </mat-error>
+                    </mat-form-field>
+                </p>
+                <p>
+                    <mat-form-field appearance="fill">
+                        <mat-label>Số điện thoại</mat-label>
+                        <input matInput placeholder="Placeholder" formControlName="soDT">
+                        <mat-hint>ví dụ: (+84) 0123456789</mat-hint>
+                        <mat-error>
+                            <div *ngIf="(soDTError?.invalid && soDTError?.touched) || soDTError?.dirty">
+                                <span *ngIf="soDTError?.errors?.required">Số điện thoại không được để trống</span>
+                            </div>
+                        </mat-error>
+                    </mat-form-field>
+                </p>
+                <p>
+                    <mat-form-field appearance="outline">
+                        <mat-label>Tài khoản</mat-label>
+                        <input matInput placeholder="Placeholder" formControlName="taiKhoan">
+                        <mat-hint>ví dụ: admin</mat-hint>
+                        <mat-error>
+                            <div *ngIf="(taiKhoanError?.invalid && taiKhoanError?.touched) || taiKhoanError?.dirty">
+                                <span *ngIf="taiKhoanError?.errors?.required">Tài khoản không được để trống</span>
+                            </div>
+                        </mat-error>
+                    </mat-form-field>
+                </p>
+                <p>
+                    <mat-form-field appearance="fill">
+                        <mat-label>Enter your password</mat-label>
+                        <input matInput [type]="hide ? 'password' : 'text'" formControlName="matKhau">
+                        <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
+                            [attr.aria-pressed]="hide">
+                            <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+                        </button>
+                        <mat-hint>ví dụ: 123456</mat-hint>
+                    </mat-form-field>
+                </p>
+                <p>
+                    <mat-form-field appearance="fill">
+                        <mat-label>Mã loại người dùng</mat-label>
+                        <select matNativeControl formControlName="maLoaiNguoiDung">
+                            <option value="" selected></option>
+                            <option *ngFor="let ma of maLoaiNguoiDung" [value]="ma.value">
+                                {{ma.viewValue}}
+                            </option>
+                        </select>
+                    </mat-form-field>
+                </p>
+                <button mat-raised-button color="warn" [disabled]="userForm.invalid" (click)="updateProfile()">Lưa thay
+                    đổi</button>
+            </form>
         </mat-card-content>
         <mat-divider></mat-divider>
         <h3 style="color: black; font-size: 25px; font-weight: 500; justify-content: center; text-align: center;"
@@ -51,4 +128,5 @@
 
         </div>
     </mat-card>
+
 </div>
