--- a/src/app/admin/user-profile/user-profile.component.scss
+++ b/src/app/admin/user-profile/user-profile.component.scss
@@ -1,7 +1,13 @@
 :host {
     color: red;
-    font-size: 50px;
+
     table {
         width: 100%;
+    }
+    .example-container .mat-form-field + .mat-form-field {
+        margin-left: 8px;
+        font-size: 8pt;
+        float: right;
+        margin: 8px;
     }
 }
