--- a/src/assets/sass/styles.scss
+++ b/src/assets/sass/styles.scss
@@ -51,4 +51,5 @@
 @import "./Layouts/signUp";
 @import "./Layouts/courseDetail";
 @import "./Layouts/user";
+@import "./Layouts/adminGhiDanhByUser";
 @import "./Layouts/footer";
