--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -2,7 +2,7 @@
 <section class="admin" id="admin">
     <div class="admin container-fluid">
 
-        <div class="admin__header row">
+        <!-- <div class="admin__header row">
             <div class="admin__header--logo col-2">
                 <p>Nhan vi van</p>
             </div>
@@ -15,7 +15,7 @@
                                 class="form-control" />
                             <div class="input-group-append">
                                 <span class="input-group-text" id="basic-addon2">
-                                    <!-- <i class="fab fa-search"></i> -->
+                                    
                                     <i class="fa fa-search"></i>
                                 </span>
                             </div>
@@ -23,7 +23,7 @@
                     </form>
                 </div>
             </div>
-        </div>
+        </div> -->
         <div class="admin__body row">
             <div class="admin__body--menu col-2">
                 <ul>
