--- a/src/app/client/danh-muc-khoa-hoc/danh-muc-khoa-hoc.component.html
+++ b/src/app/client/danh-muc-khoa-hoc/danh-muc-khoa-hoc.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" *ngIf="courses">
     <!-- <h2 style="color: white; justify-content: center; display: flex;" class="mt-5">Các khóa học gần đây</h2> -->
     <app-divider>Các khóa học {{courses[0].danhMucKhoaHoc.tenDanhMucKhoaHoc}}</app-divider>
     <div class="coursesList">
