--- a/src/app/admin/courses/courses.component.html
+++ b/src/app/admin/courses/courses.component.html
@@ -1,6 +1,24 @@
+<app-divider>Quản lý khóa học</app-divider>
 <div class="courses">
-    <h2 style="text-align: center;">Tất cả các khóa học.</h2>
-    <h3 class="users__add"> <a routerLink="/admin/courses/add-course">Thêm Khóa học</a> </h3>
+    <div class class="courses__function">
+        <div class="courses__function--title">
+            <a routerLink="/admin/courses/add-course">
+                <span class="material-icons">
+                    note_add
+                </span>
+            </a>
+            <span class="courses__function--title--hover">
+                Thêm khóa học
+            </span>
+        </div>
+        <div class="courses__function--searchBox">
+            <input (keyup)="applyFilter($any($event.target).value)" placeholder="Tìm kiếm khóa học"
+                class="search-text">
+            <a href="#" class="search-btn"><i class="fa fa-search"></i></a>
+        </div>
+
+    </div>
+
     <div *ngIf="dataSource">
         <table mat-table [dataSource]="dataSource">
             <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
@@ -34,12 +52,20 @@
             <ng-container matColumnDef="ThaoTac">
                 <th mat-header-cell *matHeaderCellDef>Thao tác</th>
                 <td mat-cell *matCellDef="let row">
-                    <button mat-raised-button color="primary" class="mr-1 p-0"
-                        (click)="openDialog(this.row.maKhoaHoc)">Ghi danh</button>
-                    <button mat-raised-button color="warn" class="mr-1 p-0"
-                        (click)="deleteCourse(this.row.maKhoaHoc)">Xoa</button>
-                    <button mat-raised-button color="accent" class="mr-1 p-0"
-                        (click)="modifyCourse(this.row)">Sửa</button>
+                    <!-- <button mat-raised-button color="primary" class="mr-1 p-0"
+                        (click)="openDialog(this.row.maKhoaHoc)">Ghi danh</button> -->
+                    <!-- <button mat-raised-button color="warn" class="mr-1 p-0"
+                        (click)="deleteCourse(this.row.maKhoaHoc)">Xoa</button> -->
+                    <!-- <button mat-raised-button color="accent" class="mr-1 p-0"
+                        (click)="modifyCourse(this.row)">Sửa</button> -->
+                    <button class="actions__btn mr-2 p-3 btn btn-primary" (click)="openDialog(this.row.maKhoaHoc)"><i
+                            class="fas fa-edit"></i>
+                        <span class="actions__mes2">Ghi danh</span>
+                    </button>
+                    <button class="actions__btn mr-2 p-3 btn btn-success" (click)="modifyCourse(this.row)"><i
+                            class="fa fa-user-edit"></i><span class="actions__mes3">Chỉnh sửa</span></button>
+                    <button class="actions__btn mr-2 p-3 btn btn-danger" (click)="deleteCourse(this.row.maKhoaHoc)"><i
+                            class="fa fa-trash-alt"></i><span class="actions__mes4">Xóa</span></button>
                 </td>
             </ng-container>
         </table>
@@ -47,5 +73,7 @@
             [pageSizeOptions]="[5, 10, 20, 30, 100]" (page)="pageEvent = $event; onPaginateChange($event)"
             showFirstLastButtons>
         </mat-paginator> -->
+        <mat-paginator [pageSize]="10" [pageSizeOptions]="[10, 20, 40, 60, 100]">
+        </mat-paginator>
     </div>
 </div>
